--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devexpress-gantt": "^1.0.9",
     "devextreme": "^17.1.17",
     "devextreme-react": "^20.1.4",
+    "jquery": "^3.5.1",
     "jszip": "^3.1.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
@@ -27,7 +28,7 @@
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
-    "react-notification-system": "^0.2.17",
+    "react-notification-system": "^0.4.0",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.8",
     "react-router": "^5.0.0",
