--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "quill": "^1.3.7",
-    "react": "^16.13.1",
+    "react": "^16.8.6",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "^0.13.3",
     "react-datepicker": "^3.0.0",
@@ -46,7 +46,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "compile-sass": "node-sass src/assets/sass/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.css",
+    "minify-sass": "node-sass src/assets/sass/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.min.css --output-style compressed",
+    "map-sass": "node-sass src/assets/sass/light-bootstrap-dashboard-react.scss src/assets/css/light-bootstrap-dashboard-react.css --source-map true"
   },
   "eslintConfig": {
     "extends": "react-app"
