--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "bootstrap": "^3.4.1",
     "chartist": "^0.10.1",
     "concurrently": "^5.3.0",
+    "firebase": "^7.23.0",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "react": "^16.8.6",
+    "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "^0.13.3",
     "react-checkbox-component": "^0.1.15",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^3.11.0",
     "react-notification-system": "^0.4.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toggle": "^4.0.2",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1"
