--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "concurrently": "^5.3.0",
     "firebase": "^7.23.0",
     "lodash": "^4.17.20",
-    "node-sass": "^4.14.1",
     "react": "^16.8.6",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "^0.13.3",
     "react-checkbox-component": "^0.1.15",
-    "react-datepicker": "^3.0.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.11.0",
@@ -28,6 +27,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
