--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "chartist": "^0.10.1",
     "concurrently": "^5.3.0",
     "firebase": "^7.23.0",
+    "install": "^0.13.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.8",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.32.4",
@@ -28,7 +31,9 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "styled-components": "^5.1.1"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.1",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
