--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.20.0",
     "bootstrap": "^3.4.1",
     "chartist": "^0.10.1",
@@ -13,14 +18,13 @@
     "node-sass": "^4.14.1",
     "npm": "^6.14.8",
     "prop-types": "^15.7.2",
+    "radium": "^0.26.1",
     "react": "^16.8.6",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "^0.13.3",
-    "react-checkbox-component": "^0.1.15",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.8.6",
-    "react-google-maps": "^9.4.5",
     "react-icons": "^3.11.0",
     "react-notification-system": "^0.4.0",
     "react-redux": "^7.2.1",
@@ -31,6 +35,7 @@
     "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
     "universal-cookie": "^4.0.4"
