--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.8.6",
     "react-icons": "^3.11.0",
+    "react-iframe": "^1.8.0",
     "react-notification-system": "^0.4.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.0.0",
